--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page">
       <header class="header">
-        <div class="header__logo_theme_dark header__logo_theme_light"></div>
+        <div class="header__logo header__logo_theme_dark header__logo_theme_light"></div>
       </header>
       <main class="content">
         <section class="profile">
@@ -27,43 +27,43 @@
           <div class="elements__item">
             <img src="./images/lipeck.jpeg" alt="поле в липецкой области" class="elements__item-img">
             <div class="elements__item-container">
-              <h2 class="element__item-name">Липецк</h2>
-              <div class="element__item-like element__item-like_active"></div>
+              <h2 class="elements__item-name">Липецк</h2>
+              <div class="elements__item-like elements__item-like_active"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/shuya.jpeg" alt="страусиная ферма в г. Шуя" class="elements__item-img">
             <div class="elements__item-container">
-              <h2 class="element__item-name">Шуя</h2>
-              <div class="element__item-like element__item-like_active"></div>
+              <h2 class="elements__item-name">Шуя</h2>
+              <div class="elements__item-like elements__item-like_active"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/msk.jpeg" alt="Москва-Сити" class="elements__item-img">
             <div class="elements__item-container">
-              <h2 class="element__item-name">Москва</h2>
-              <div class="element__item-like element__item-like_active"></div>
+              <h2 class="elements__item-name">Москва</h2>
+              <div class="elements__item-like elements__item-like_active"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/ples.jpeg" alt="пирс в г. Плес" class="elements__item-img">
             <div class="elements__item-container">
-              <h2 class="element__item-name">Плёс</h2>
-              <div class="element__item-like element__item-like_active"></div>
+              <h2 class="elements__item-name">Плёс</h2>
+              <div class="elements__item-like elements__item-like_active"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/piter.jpeg" alt="двор-колодец" class="elements__item-img">
             <div class="elements__item-container">
-              <h2 class="element__item-name">Санкт-Петербург</h2>
-              <div class="element__item-like element__item-like_active"></div>
+              <h2 class="elements__item-name">Санкт-Петербург</h2>
+              <div class="elements__item-like elements__item-like_active"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/ivanovo.jpeg" alt="отражение осеннего леса в реке" class="elements__item-img">
             <div class="elements__item-container">
-              <h2 class="element__item-name">Иваново</h2>
-              <div class="element__item-like element__item-like_active"></div>
+              <h2 class="elements__item-name">Иваново</h2>
+              <div class="elements__item-like elements__item-like_active"></div>
             </div>
           </div>
         </section>
