--- a/index.html
+++ b/index.html
@@ -28,42 +28,42 @@
             <img src="./images/lipeck.jpeg" alt="поле в липецкой области" class="elements__item-img">
             <div class="elements__item-container">
               <h2 class="elements__item-name">Липецк</h2>
-              <div class="elements__item-like elements__item-like_active"></div>
+              <div class="elements__item-like elements__item-like_on elements__item-like_off"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/shuya.jpeg" alt="страусиная ферма в г. Шуя" class="elements__item-img">
             <div class="elements__item-container">
               <h2 class="elements__item-name">Шуя</h2>
-              <div class="elements__item-like elements__item-like_active"></div>
+              <div class="elements__item-like elements__item-like_on elements__item-like_off"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/msk.jpeg" alt="Москва-Сити" class="elements__item-img">
             <div class="elements__item-container">
               <h2 class="elements__item-name">Москва</h2>
-              <div class="elements__item-like elements__item-like_active"></div>
+              <div class="elements__item-like elements__item-like_on elements__item-like_off"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/ples.jpeg" alt="пирс в г. Плес" class="elements__item-img">
             <div class="elements__item-container">
               <h2 class="elements__item-name">Плёс</h2>
-              <div class="elements__item-like elements__item-like_active"></div>
+              <div class="elements__item-like elements__item-like_on elements__item-like_off"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/piter.jpeg" alt="двор-колодец" class="elements__item-img">
             <div class="elements__item-container">
               <h2 class="elements__item-name">Санкт-Петербург</h2>
-              <div class="elements__item-like elements__item-like_active"></div>
+              <div class="elements__item-like elements__item-like_on elements__item-like_off"></div>
             </div>
           </div>
           <div class="elements__item">
             <img src="./images/ivanovo.jpeg" alt="отражение осеннего леса в реке" class="elements__item-img">
             <div class="elements__item-container">
               <h2 class="elements__item-name">Иваново</h2>
-              <div class="elements__item-like elements__item-like_active"></div>
+              <div class="elements__item-like elements__item-like_on elements__item-like_off"></div>
             </div>
           </div>
         </section>
