--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <template class="item">
             <div class="elements__item">
               <div class="elements__item-trash"></div>
-              <img src="" alt="" class="elements__item-img">
+              <img src="#" alt="" class="elements__item-img">
               <div class="elements__item-container">
                 <h2 class="elements__item-name"></h2>
                 <div class="elements__item-like"></div>
@@ -117,7 +117,7 @@
         <div class="popup__img-container">
           <button class="popup__img-close"></button>
           <figure class="img">
-            <img class="img__full" alt="" src="">
+            <img class="img__full" alt="" src="#">
             <figcaption class="img__title"></figcaption>
           </figure>
         </div>
