--- a/index.html
+++ b/index.html
@@ -34,63 +34,15 @@
               </div>
             </div>
           </template>
-          <!-- <div class="elements__item">
-            <button class="elements__item-trash"></button>
-            <img src="./images/lipeck.jpeg" alt="поле в липецкой области" class="elements__item-img">
-            <div class="elements__item-container">
-              <h2 class="elements__item-name">Липецк</h2>
-              <div class="elements__item-like"></div>
-            </div>
-          </div>
-          <div class="elements__item">
-            <button class="elements__item-trash"></button>
-            <img src="./images/shuya.jpeg" alt="страусиная ферма в г. Шуя" class="elements__item-img">
-            <div class="elements__item-container">
-              <h2 class="elements__item-name">Шуя</h2>
-              <div class="elements__item-like"></div>
-            </div>
-          </div>
-          <div class="elements__item">
-            <button class="elements__item-trash"></button>
-            <img src="./images/msk.jpeg" alt="Москва-Сити" class="elements__item-img">
-            <div class="elements__item-container">
-              <h2 class="elements__item-name">Москва</h2>
-              <div class="elements__item-like"></div>
-            </div>
-          </div>
-          <div class="elements__item">
-            <button class="elements__item-trash"></button>
-            <img src="./images/ples.jpeg" alt="пирс в г. Плес" class="elements__item-img">
-            <div class="elements__item-container">
-              <h2 class="elements__item-name">Плёс</h2>
-              <div class="elements__item-like"></div>
-            </div>
-          </div>
-          <div class="elements__item">
-            <button class="elements__item-trash"></button>
-            <img src="./images/piter.jpeg" alt="двор-колодец" class="elements__item-img">
-            <div class="elements__item-container">
-              <h2 class="elements__item-name">Санкт-Петербург</h2>
-              <div class="elements__item-like"></div>
-            </div>
-          </div>
-          <div class="elements__item">
-            <button class="elements__item-trash"></button>
-            <img src="./images/ivanovo.jpeg" alt="отражение осеннего леса в реке" class="elements__item-img">
-            <div class="elements__item-container">
-              <h2 class="elements__item-name">Иваново</h2>
-              <div class="elements__item-like"></div>
-            </div>
-          </div> -->
         </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">© 2022 Mesto Russia</p>
       </footer>
-      <div class="popup popup__edit">
+      <div class="popup popup_edit">
         <div class="popup__container">
-          <button class="popup__edit-close"></button>
-          <form action="#" class="form form__edit">
+          <button class="popup_edit_close"></button>
+          <form action="#" class="form form_edit">
             <h3 class="form__title">Редактировать профиль</h3>
             <fieldset class="form__input">
               <input type="text" class="form__input-name">
@@ -100,10 +52,10 @@
           </form>
         </div>
       </div>
-      <div class="popup popup__add">
+      <div class="popup popup_add">
         <div class="popup__container">
-          <button class="popup__add-close"></button>
-          <form action="#" class="form form__add">
+          <button class="popup_add_close"></button>
+          <form action="#" class="form form_add">
             <h3 class="form__title">Новое место</h3>
             <fieldset class="form__input">
               <input type="text" class="form__input-city" placeholder="Название">
@@ -113,9 +65,9 @@
           </form>
         </div>
       </div>
-      <div class="popup popup__img">
-        <div class="popup__img-container">
-          <button class="popup__img-close"></button>
+      <div class="popup popup_img">
+        <div class="popup_img_container">
+          <button class="popup_img_close"></button>
           <figure class="img">
             <img class="img__full" alt="" src="#">
             <figcaption class="img__title"></figcaption>
