--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="popup popup_add">
         <div class="popup__container">
-          <button class="popup_add_close"></button>
+          <button class="popup__add-close"></button>
           <form action="#" class="form form_add">
             <h3 class="form__title">Новое место</h3>
             <fieldset class="form__input">
