--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </footer>
       <div class="popup popup_edit">
         <div class="popup__container">
-          <button class="popup_edit_close"></button>
+          <button class="popup__edit-close"></button>
           <form action="#" class="form form_edit">
             <h3 class="form__title">Редактировать профиль</h3>
             <fieldset class="form__input">
@@ -66,8 +66,8 @@
         </div>
       </div>
       <div class="popup popup_img">
-        <div class="popup_img_container">
-          <button class="popup_img_close"></button>
+        <div class="popup__img-container">
+          <button class="popup__img-close"></button>
           <figure class="img">
             <img class="img__full" alt="" src="#">
             <figcaption class="img__title"></figcaption>
