--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./styles/index.css">
+  <script src="./script/data.js" defer></script>
+  <script src="./script/script.js" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
 </head>
@@ -17,11 +19,11 @@
           <div class="profile__info">
             <div class="profile__container">
               <h1 class="profile__info-name">Жак-Ив Кусто</h1>
-              <button class="profile__info-edit"></button>
+              <button class="profile__info-edit" aria-label="edit"></button>
             </div>
             <p class="profile__info-description">Исследователь океана</p>
           </div>
-          <button class="profile__add"></button>
+          <button class="profile__add" aria-label="add"></button>
         </section>
         <section class="elements">
           <template class="item">
@@ -41,12 +43,12 @@
       </footer>
       <div class="popup popup_edit">
         <div class="popup__container">
-          <button class="popup__edit-close"></button>
+          <button class="popup__edit-close" aria-label="edit-close"></button>
           <form action="#" class="form form_edit">
             <h3 class="form__title">Редактировать профиль</h3>
             <fieldset class="form__input">
-              <input type="text" class="form__input-name">
-              <input type="text" class="form__input-description">
+              <input type="text" class="form__input-name" placeholder="Имя" required>
+              <input type="text" class="form__input-description" placeholder="О себе" required>
             </fieldset>
             <button class="form__save">Сохранить</button>
           </form>
@@ -54,12 +56,12 @@
       </div>
       <div class="popup popup_add">
         <div class="popup__container">
-          <button class="popup__add-close"></button>
+          <button class="popup__add-close" aria-label="add-close"></button>
           <form action="#" class="form form_add">
             <h3 class="form__title">Новое место</h3>
             <fieldset class="form__input">
-              <input type="text" class="form__input-city" placeholder="Название">
-              <input type="text" class="form__input-link" placeholder="Ссылка на картинку">
+              <input type="text" class="form__input-city" placeholder="Название" required>
+              <input type="url" class="form__input-link" placeholder="Ссылка на картинку" required>
             </fieldset>
             <button class="form__save">Создать</button>
           </form>
@@ -67,7 +69,7 @@
       </div>
       <div class="popup popup_img">
         <div class="popup__img-container">
-          <button class="popup__img-close"></button>
+          <button class="popup__img-close" aria-label="img-close"></button>
           <figure class="img">
             <img class="img__full" alt="" src="#">
             <figcaption class="img__title"></figcaption>
@@ -75,6 +77,5 @@
         </div>
       </div>
   </div>
-  <script src="./script/script.js"></script>
 </body>
 </html>
