--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <input id="imagelink" type="url" class="form__input-link popup__input" placeholder="Ссылка на картинку" required>
               <span class="imagelink-error popup__input-error"></span>
             </fieldset>
-            <button class="form__save popup__button">Создать</button>
+            <button class="form__save popup__button" disabled>Создать</button>
           </form>
         </div>
       </div>
