--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./styles/index.css">
-  <script src="./script/validate.js" defer></script>
-  <script src="./script/data.js" defer></script>
-  <script src="./script/script.js" defer></script>
+  <script type="module" src="./script/Card.js" defer></script>
+  <script type="module" src="./script/FormValidation.js" defer></script>
+  <script type="module" src="./script/data.js" defer></script>
+  <script type="module" src="./script/script.js" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
 </head>
