--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
       </div>
       <div class="popup popup_add">
         <div class="popup__container">
-          <button id="button-close" class="popup__add-close popup-close" aria-label="add-close"></button>
+          <button class="popup__add-close popup-close" aria-label="add-close"></button>
           <form id="form" action="#" class="form form_add popup__form" novalidate>
             <h3 class="form__title">Новое место</h3>
             <fieldset class="form__input">
@@ -61,7 +61,7 @@
       </div>
       <div class="popup popup_img">
         <div class="popup__img-container">
-          <button id="button-close" class="popup__img-close popup-close" aria-label="img-close"></button>
+          <button class="popup__img-close popup-close" aria-label="img-close"></button>
           <figure class="img">
             <img class="img__full" alt="" src="#">
             <figcaption class="img__title"></figcaption>
