--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
       <div class="popup popup_edit">
         <div class="popup__container">
           <button class="popup__edit-close popup-close" aria-label="edit-close"></button>
-          <form action="#" class="form form_edit popup__form" novalidate>
+          <form name="form-edit" action="#" class="form form_edit popup__form" novalidate>
             <h3 class="form__title">Редактировать профиль</h3>
             <fieldset class="form__input">
               <input id="username" type="text" name="name" class="form__input-name popup__input" placeholder="Имя" minlength="2" maxlength="40" required>
@@ -47,7 +47,7 @@
       <div class="popup popup_add">
         <div class="popup__container">
           <button class="popup__add-close popup-close" aria-label="add-close"></button>
-          <form action="#" class="form form_add popup__form" novalidate>
+          <form name="form-add" action="#" class="form form_add popup__form" novalidate>
             <h3 class="form__title">Новое место</h3>
             <fieldset class="form__input">
               <input id="cityname" name="name" type="text" class="form__input-city popup__input" placeholder="Название" minlength="2" maxlength="30" required>
